@@ -3,8 +3,8 @@ package com.github.lordcrekit.tagstats.fetching;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public final class BrowseParseResultTest {
 
@@ -12,10 +12,10 @@ public final class BrowseParseResultTest {
      * Tests all IO.
      */
     @Test
-    public void toJSON() throws MalformedURLException {
-        final URL google = new URL("https://www.google.com");
-        final URL yahoo = new URL("https://www.yahoo.com");
-        final URL[] google_yahoo = new URL[]{google, yahoo};
+    public void toJSON() throws URISyntaxException {
+        final URI google = new URI("https://www.google.com");
+        final URI yahoo = new URI("https://www.yahoo.com");
+        final URI[] google_yahoo = new URI[]{google, yahoo};
 
         final BrowseParseResult orig = new BrowseParseResult(google, google_yahoo);
         final BrowseParseResult copy = new BrowseParseResult(orig.toJSON());
@@ -24,16 +24,18 @@ public final class BrowseParseResultTest {
     }
 
     @Test
-    public void equals() throws MalformedURLException {
-        final URL google = new URL("https://www.google.com");
-        final URL yahoo = new URL("https://www.yahoo.com");
-        final URL bing = new URL("https://www.bing.com");
+    public void equals() throws URISyntaxException {
+        final URI google = new URI("https://www.google.com");
+        final URI yahoo = new URI("https://www.yahoo.com");
+        final URI bing = new URI("https://www.bing.com");
 
-        final URL[] google_yahoo = new URL[]{google, yahoo};
-        final URL[] yahoo_bing = new URL[]{yahoo, bing};
+        final URI[] google_yahoo = new URI[]{google, yahoo};
+        final URI[] yahoo_bing = new URI[]{yahoo, bing};
+        final URI[] google_yahoo_bing = new URI[]{google, yahoo, bing};
 
         BrowseParseResult o1 = new BrowseParseResult(google, google_yahoo);
         BrowseParseResult o2 = new BrowseParseResult(google, google_yahoo);
+
         Assert.assertEquals(o1, o2);
         o2 = new BrowseParseResult(bing, google_yahoo);
         Assert.assertNotEquals(o1, o2);
@@ -44,5 +46,11 @@ public final class BrowseParseResultTest {
         o2 = new BrowseParseResult(bing, yahoo_bing);
         Assert.assertNotEquals(o1, o2);
         Assert.assertNotEquals(o2, o1);
+
+        o2 = new BrowseParseResult(yahoo, google_yahoo_bing);
+        Assert.assertNotEquals(o1, o2);
+        Assert.assertNotEquals(o2, o1);
+        o1 = new BrowseParseResult(yahoo, google_yahoo_bing);
+        Assert.assertEquals(o1, o2);
     }
 }
